bk_ida/gccida/g0/df_reg_clobber_gen
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_reg_clobber_gen/src/df.c:1116:34: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_e( CLOBBER, ( machine_mode)*( ( unsigned __int8 *)v1 + 2), v1); 
                                 ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_reg_clobber_gen/src/obj/df.o] Error 1
